<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/eventInfoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:text="@string/eventInfo_title"

        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/eventCatalogButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:text="@string/eventCatalog_title"

        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/eventScheduleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:text="@string/eventSessions_title"


        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</android.support.constraint.ConstraintLayout>